# personal-dungeon-master

./: .env.example  .gitignore  ACTION.md  MEMORY_SYSTEM.md  README.md  TODO.md  pyproject.toml  requirements.txt  start_llama_server.bat
campaigns/Anansi the Spider/: Anansi the Spider.txt  README.md  characters.md  creatures.md
campaigns/example-campaign/: README.md  character.md  creature.md  example-campaign.txt
rules/5e/: combat.md  conditions.md  core.md  equipment.md  spellcasting.md
scripts/: smoke_test_dm.py  test_kuzu_fts.py  validate_campaign.py
src/: config.py  main.py
src/campaign/: bm25_index.py  chunker.py  compressor.py  fusion.py  header.py  index.py  loader.py  parser.py  segment_extractor.py  selector.py
src/dice/: die.py  roller.py
src/dm/: context_builder.py  dungeon_master.py  personality.py  retrieval_config.py  spoiler_guard.py
src/interface/: cli.py
src/llm/: base.py  factory.py  llamacpp_provider.py  ollama_provider.py
src/rules/: loader.py  reference.py
tests/: conftest.py  test_chunker.py  test_dice.py  test_dm.py  test_llm.py  test_loader.py  test_memory.py  test_parser.py  test_raptor_memorag.py  test_rules.py
